# SilentDragonLite

./: DEVELOPING.md  OKtadP.json  README.md  application.qrc  public_key.asc  silentdragon-lite.pro
lib/: Cargo.toml
res/: Info.plist  SilentDragonLite.xpm  silentdragonlite_de.qm  silentdragonlite_de.ts  silentdragonlite_es.ts  silentdragonlite_fa.qm  silentdragonlite_fa.ts  silentdragonlite_fr.ts  silentdragonlite_hr.ts  silentdragonlite_it.ts  silentdragonlite_pt.ts  silentdragonlite_sr.ts  silentdragonlite_template.ts  silentdragonlite_tr.ts  silentdragonlite_zh.ts
res/libsodium/: buildlibsodium.sh
src/: camount.cpp  controller.cpp  controller.h  liteinterface.cpp  liteinterface.h  main.cpp  mainwindow.cpp  mainwindow.ui  recurring.cpp  sendtab.cpp  settings.ui  sietch.h  version.h  websockets.cpp  websockets.h
src/scripts/: dotranslations.sh  mkmacdmg.sh  signbinaries.sh
