[package]
name = "qtlib"
version = "0.1.0"
authors = ["zecwallet"]
edition = "2018"

[lib]
name = "silentdragonlite"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.58"
lazy_static = "1.4.0"
silentdragonlitelib = { git = "https://github.com/MyHush/silentdragonlite-cli", rev = "b5534d6f830b9af2e6a2992d67c99fea2ef5f21a" }
