[package]
name = "qtlib"
version = "0.1.0"
authors = ["zecwallet"]
edition = "2018"

[lib]
name = "silentdragonlite"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.58"
lazy_static = "1.4.0"
silentdragonlitelib = { git = "https://github.com/MyHush/silentdragonlite-cli", rev = "015e1617ab836481b0fd7c357ac2977191964730" }
